# Berserker

./: .env  .gitignore  LICENSE  README.md  config.toml.example  pyproject.toml  run
.utils/: git
src/: __main__.py
src/classes/: __init__.py  berserker.py  config_object.py
src/extensions/: __init__.py
src/extensions/listener/: __init__.py  listener.py
